# SpecLens

./: .gitignore  README.md  pyproject.toml  run_ablation_clip.sh  run_ablation_sam2.sh  run_index.sh  run_train.sh
configs/: clip_attr_viz.yaml  clip_circuit_tree_fordebug.yaml  clip_imagenet_ablation.yaml  clip_imagenet_e2e_debug.yaml  clip_imagenet_index.yaml  clip_imagenet_index_debiased.yaml  clip_imagenet_ra-batchtopk_debiased.yaml  clip_imagenet_topk_index.yaml  clip_imagenet_topk_train.yaml  clip_imagenet_train.yaml  clip_mipal_50k.yaml  clip_mipal_50k_index.yaml  dinov2_imagenet_train.yaml  dinov3_imagenet_train.yaml  dinov3_mipal_50k.yaml  dinov3_mipal_50k_index.yaml  mask2former_sav_train.yaml  resnet18_imagenet_train.yaml  sam2_sav_ablation.yaml  sam2_sav_batchtopk_index.yaml  sam2_sav_batchtopk_train.yaml  sam2_sav_batchtopk_train_batchtopk.yaml  sam2_sav_feature_index.yaml  sav_index_10k_videos.txt  sav_valid_videos.txt  siglip_imagenet_train.yaml  siglip_mipal_50k.yaml  siglip_mipal_50k_index.yaml
docs/: sae_output_metrics_and_e2e.md
scripts/: analyze_feature_erf_hard_curves.py  analyze_single_sample_baseline_swap.py  build_blind_panel_compare_html.py  build_blind_panel_source_from_ledger.py  build_clip_circuit.py  build_erf_indicator_variants_source.py  build_feature_selection_manifest.py  build_sparse_class_consistent_manifest.py  build_supplementary_suite_index.py  cache_activation_baselines.py  check_index_consistency.py  check_ledger_activation_consistency.py  compute_global_mean_h_baseline.py  diagnose_cautious_baseline.py  inspect_cautious_case.py  (+25 more)
(+135 files in other folders)
